# pybiorythm-django-sqlite-example

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  quickstart.py  setup.sh
.github/workflows/: ci.yml
biorhythm_data/: admin.py  apps.py  models.py
biorhythm_data/management/commands/: load_biorhythm_data.py
biorhythm_data/migrations/: 0001_initial.py
biorhythm_storage/: asgi.py  settings.py  urls.py  wsgi.py
