[project]
name = "pybiorythm-django-sqlite-example"
version = "1.0.0"
description = "Standalone Django + SQLite integration example for PyBiorythm data storage and management"
requires-python = ">=3.8,<3.13"
dependencies = [
    "django>=5.2.5",
    "python-dateutil>=2.8.0",
    "biorythm @ git+https://github.com/dkdndes/pybiorythm.git",
]

[project.optional-dependencies]
dev = [
    "django-extensions",
    "coverage>=7.0.0",
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
]

[tool.django]
settings_module = "biorhythm_storage.settings"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "biorhythm_storage.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/tests/*",
    "manage.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]